# moodle-downloader

./: .gitignore  README.md  pyproject.toml
src/moodle_sync/: __init__.py  cli.py  config.py  core.py  web.py
