[project]
name = "moodle-sync"
version = "0.2.0"
description = "Sync Moodle course files via a small local web UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "keyring>=25.0",
    "platformdirs>=4.2",
    "python-multipart>=0.0.9",
]

[project.scripts]
moodle-sync = "moodle_sync.web:main"
moodle-sync-cli = "moodle_sync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moodle_sync"]
